--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
-<!DOCTYPE html><html lang="pt"><head>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vídeo com Thumbnail</title>
 <style>
   .video-container {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
     position: relative;
+    width: 100%;
+    /* Define a proporção mantendo a largura total e ajustando a altura proporcionalmente */
+    padding-top: 178.21782178217822%;
+    background: #000; /* Cor de fundo para preencher qualquer espaço vazio */
+    overflow: hidden;
   }
-  video {
+  video, .video-thumbnail {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
   .video-thumbnail {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 50%;
     cursor: pointer;
     background: url('images/tNKnPVAoxFEo.png') center center no-repeat;
     background-size: cover;
     transform: scale(1);
 	animation: pulse 2s infinite;
   }
-  
   @keyframes pulse {
 	0% {
 		transform: scale(0.95);
 		box-shadow: 0 0 0 0 rgba(207, 47, 116, 0.7);
 	}
-
 	70% {
 		transform: scale(1);
 		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
 	}
-
 	100% {
 		transform: scale(0.95);
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
-}
+  }
 </style>
 </head>
 <body>
@@ -67,7 +66,5 @@
     }
   }
 </script>
-
-
 
 </body></html>
