--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     object-fit: cover;
   }
   .video-thumbnail {
+    position: absolute;
+    top: 40%;
+    left: 0;
+    width: 100%;
+    height: 60%;
     cursor: pointer;
     background: url('images/tNKnPVAoxFEo.png') center center no-repeat;
     background-size: cover;
